ongoing fix chat functionality
